[package]
name = "transmitic_core"
version = "0.14.0"
authors = ["Andrew Shay <andrew.shay@andrewshay.me>"]
edition = "2021"

[lib]
name = "transmitic_core"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.189", features = ["derive", "rc"] }
serde_json = "1.0.107"
rand = "0.8.5"
rand_core = "0.6.4"
aes-gcm = { version = "0.10.3", features = ["heapless"] }
ring = "0.17.5"
base64 = "0.21.4"
crc32fast = "1.3.2"

[dependencies.x25519-dalek]
version = "2.0.0"
