[package]
name = "transmitic_core"
version = "0.16.0"
authors = ["Andrew Shay <andrew.shay@andrewshay.me>"]
edition = "2021"

[lib]
name = "transmitic_core"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.196", features = ["derive", "rc"] }
serde_json = "1.0.113"
rand = "0.8.5"
rand_core = "0.6.4"
aes-gcm = { version = "0.10.3", features = ["heapless"] }
ring = "0.17.8"
crc32fast = "1.4.0"

[dependencies.x25519-dalek]
version = "2.0.1"
